Matching normal folder structure for GitHub projects

--- a/tests/ChessLogicTests/ChessLogicTests.csproj
+++ b/tests/ChessLogicTests/ChessLogicTests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChessLogic\ChessLogic.csproj" />
+    <ProjectReference Include="..\..\src\ChessLogic\ChessLogic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
