--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         dotnet-version: '8.0.x'   # or 7.0.x / 6.0.x depending on your project
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore src/ChessGame.sln
 
     - name: Build
       run: dotnet build --no-restore --configuration Release
