--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       run: dotnet restore src/ChessGame.sln
 
     - name: Build
-      run: dotnet build --no-restore --configuration Release
+      run: dotnet build src/ChessGame.sln --no-restore --configuration Release
 
     - name: Run tests
       run: dotnet test --no-build --configuration Release --verbosity normal
