--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install ReportGenerator
+      run: dotnet tool install --global dotnet-reportgenerator-globaltool
+
     - name: Checkout repository
       uses: actions/checkout@v4
 
@@ -25,3 +28,15 @@ jobs:
 
     - name: Run tests
       run: dotnet test src/ChessGame.sln --no-build --configuration Release --verbosity normal
+
+    - name: Generate coverage report
+      run: reportgenerator \
+            -reports:**/coverage.cobertura.xml \
+            -targetdir:coverage-report \
+            -reporttypes:Html
+
+    - name: Upload coverage report artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: coverage-report
