--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,9 @@ jobs:
     - name: Build
       run: dotnet build src/ChessGame.sln --no-restore --configuration Release
 
-    - name: Run tests
-      run: dotnet test src/ChessGame.sln --no-build --configuration Release --verbosity normal
+    - name: Run tests with coverage
+      run: dotnet test src/ChessGame.sln --no-build --configuration Release \
+            --collect:"XPlat Code Coverage"
 
     - name: Generate coverage report
       run: reportgenerator \
