--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install ReportGenerator
-      run: dotnet tool install --global dotnet-reportgenerator-globaltool
-
     - name: Checkout repository
       uses: actions/checkout@v4
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0.x'
+        dotnet-version: '8.0.x'   # or 7.0.x / 6.0.x depending on your project
 
     - name: Restore dependencies
       run: dotnet restore src/ChessGame.sln
@@ -26,20 +23,5 @@ jobs:
     - name: Build
       run: dotnet build src/ChessGame.sln --no-restore --configuration Release
 
-    - name: Run tests with coverage
-      run: dotnet test tests/ChessLogicTests/ChessLogicTests.csproj --no-build --configuration Release \
-        /p:CollectCoverage=true \
-        /p:CoverletOutputFormat=cobertura \
-        /p:CoverletOutput=TestResults/coverage/
-
-    - name: Generate coverage report
-      run: reportgenerator \
-            -reports:**/coverage.cobertura.xml \
-            -targetdir:coverage-report \
-            -reporttypes:Html
-
-    - name: Upload coverage report artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: coverage-report
-        path: coverage-report
+    - name: Run tests
+      run: dotnet test src/ChessGame.sln --no-build --configuration Release --verbosity normal
